# qtfresco

./: .gitignore  CMakeLists.txt
cmake/modules/: FindQT.cmake  FindSimpleScan.cmake
include/: frescout.hpp  graphPlotter.hpp  qtfresco.hpp  readGrace.hpp
qtfiles/: qtfresco.pro  qtfresco.ui
share/: CMakeLists.txt
share/modulefiles/: qtfresco
source/: CMakeLists.txt  frescout.cpp  graphPlotter.cpp  main.cpp  qtfresco.cpp  readGrace.cpp
